# Set the PSP and OSAL for this build

# Set what we're going to call the executable file.
set(CFE_EXEC_FILE core-bin)

# Process the CFE CMake file.  This contains pretty much everything.
add_subdirectory($ENV{CFE_CORE_SRC}/make cfe)

# Set where to put the file.
set_target_properties(${CFE_EXEC_FILE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${INSTALL_DIR})

# Where to put applications
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${INSTALL_DIR} PARENT_SCOPE)

# Where to put tables
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${INSTALL_DIR} PARENT_SCOPE)

# Pass some variables up to the parent.
set(COMPILE_FLAGS ${COMPILE_FLAGS} PARENT_SCOPE)
set(LINK_FLAGS ${LINK_FLAGS} PARENT_SCOPE)
set(CFE_INC_DIRS ${CFE_INC_DIRS} PARENT_SCOPE)
set(OSAL_INC_DIRS ${OSAL_INC_DIRS} PARENT_SCOPE)
set(PSP_INC_DIRS ${PSP_INC_DIRS} PARENT_SCOPE)
set(CMAKE_C_COMPILER ${CMAKE_C_COMPILER} PARENT_SCOPE)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} PARENT_SCOPE)
set(CMAKE_CXX_COMPILER ${CMAKE_CXX_COMPILER} PARENT_SCOPE)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} PARENT_SCOPE)
SET(CMAKE_AR ${CMAKE_AR} PARENT_SCOPE)
set(CMAKE_C_ARCHIVE_FINISH ${CMAKE_C_ARCHIVE_FINISH} PARENT_SCOPE)
SET(CMAKE_CXX_ARCHIVE_CREATE ${CMAKE_CXX_ARCHIVE_CREATE} PARENT_SCOPE)
SET(CMAKE_C_ARCHIVE_CREATE ${CMAKE_C_ARCHIVE_CREATE} PARENT_SCOPE)
