# Build each application and associated table(s)
add_subdirectory(elf2cfetbl elf2cfetbl)

# Pass variables back up to the parent.
set(ELF2CFETBL_PATH ${ELF2CFETBL_PATH} PARENT_SCOPE)
set(CMAKE_AR ${CMAKE_AR} PARENT_SCOPE)
set(CMAKE_C_ARCHIVE_FINISH ${CMAKE_C_ARCHIVE_FINISH} PARENT_SCOPE)
set(CMAKE_CXX_ARCHIVE_CREATE ${CMAKE_CXX_ARCHIVE_CREATE} PARENT_SCOPE)
set(CMAKE_C_ARCHIVE_CREATE ${CMAKE_C_ARCHIVE_CREATE} PARENT_SCOPE)
set(ELF2CFETBL_PATH ${ELF2CFETBL_PATH} PARENT_SCOPE)